<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >
    
	<ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" 
        android:contentDescription="@string/logo" />
   
    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/username"
        android:text="@string/username"
        android:padding="5dp"
        android:layout_alignLeft="@id/logo" />
    
    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password"
        android:text="@string/password"
        android:padding="5dp"
        android:layout_alignLeft="@id/logo" />
    
    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/username_text"
        android:layout_below="@+id/logo"
        android:ems="10"
        android:layout_gravity="center_vertical"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:padding="5dp"
        
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/password_text"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="5dp"
        
        />

    <CheckBox
        android:id="@+id/rememberBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:text="@string/remember"
        
        
        />

    

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rememberBox"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/button_login"
        android:onClick="login"
        
        />



</RelativeLayout>
