<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/url"
        android:hint="@string/hint_server"
        android:inputType="text"
        android:padding="5dp" >

    </EditText>

    <TextView
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/server"
        android:layout_alignBottom="@+id/server"
        android:layout_alignParentLeft="true"
        android:text="@string/server"
        tools:context=".SetUpServer" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/server"
        
        android:onClick="clear"
        android:padding="5dp"
        android:text="@string/clear" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_below="@+id/server"
        android:layout_toLeftOf="@+id/clear_button"
        android:onClick="ok"
        android:padding="5dp"
        android:text="@string/ok" />

</RelativeLayout>
